test/tests/stages/16_characters_and_strings/invalid_types/extra_credit/postfix_incr_string.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  CPostfix: 
                  None: 
                  CBinary: 
                    CAdd: 
                    CString: 
                      CStringLiteral: 
                        List[3]: 
                          TChar: 102
                          TChar: 111
                          TChar: 111
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
